FIX for Advanced Search layout - iframe moved to top and floated right so it doesn't introduce a gap.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10334 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -620,7 +620,7 @@ li.plupload_droptext {font-size: 1.1em;}
     cursor: pointer;
     }
 
-h2.CollapsibleSectionHead {
+h2.CollapsibleSectionHead, h1.CollapsibleSectionHead {
 	padding: 0.1em 0 0.5em 0;
 }
 
